@@ -22,6 +22,10 @@ KDUMP_KERNELVER=""
 # DON'T CHANGE IT unless your system can reliably re-initialize SMP after
 # a kernel crash.
 #
+# WARNING: SETTING THIS NUMBER TO A NUMBER HIGHER THAN 1 IS EXPERIMENTAL!
+# SOME MACHINES ARE KNOWN TO HANG OR REBOOT RANDOMLY DURING INITIALISATION
+# OF THE DUMP KERNEL IF KDUMP_CPUS > 1.
+#
 # See also: kdump(5).
 #
 KDUMP_CPUS=1
